rpi5/yamtrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamtrack
  labels:
    app: yamtrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yamtrack
  template:
    metadata:
      name: yamtrack
      labels:
        app: yamtrack
    spec:
      containers:
        - name: yamtrack
          image: ghcr.io/fuzzygrim/yamtrack:0.26.3@sha256:78497b454b2b52d3b1062f6fd238351d714cff0895db4369e49ace36f4622e75
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              port: http
              path: /health/
            timeoutSeconds: 5
      restartPolicy: Always
