rpi5/yamtrack/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empty
spec:
  template:
    spec:
      containers:
        - name: app
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              port: http
              path: /health/
            timeoutSeconds: 5
