rpi5/yamtrack/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: empty
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
