rpi5/yamtrack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yamtrack
spec:
  selector:
    app: yamtrack
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
