rpi5/yamtrack/ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`yamtrack.anshulg.direct`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: yamtrack
          port: 80
  tls:
    secretName: yamtrack-public-cert-tls
    domains:
      - main: yamtrack.anshulg.direct
